Closed Bug 1844281 Opened 10 months ago Closed 10 months ago

EMEDecryptor misreport audio decoding on tab

Categories

(Core :: Audio/Video, defect)

defect

Tracking

()

RESOLVED FIXED
117 Branch
Tracking Status
firefox117 --- fixed

People

(Reporter: gerard-majax, Assigned: gerard-majax)

References

Details

Attachments

(1 file)

We are not overriding GetProcessName() https://searchfox.org/mozilla-central/rev/907db2c22743f1b24496198b10a3dca4085cfb08/dom/media/platforms/agnostic/eme/EMEDecoderModule.cpp#275 and so we are reporting the wrong process to telemetry.

Confirmed locally using Spotify Premium account:

audioProcessPerCodecName=tab,aac

Doing correct override gets us proper report:

audioProcessPerCodecName=utility+audioDecoder_Generic,aac

Nice spotting for :alwu.

Blocks: 1844284
Pushed by alissy@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d06da8cdebbf
Correct telemetry reporting of EMEDecryptor process r=padenot
Status: NEW → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: