Bug 1844281 - Correct telemetry reporting of EMEDecryptor process r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D183956